<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_team"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/timOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/a_team"
        android:gravity="center"/>

    <EditText
        android:id="@+id/timTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/b_team"
        android:gravity="center"/>

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"/>

</LinearLayout>