<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/scoreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/aTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_team"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="---"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/scoreA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textAllCaps="false"
                android:textSize="50dp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"/>
            <Button
                android:id="@+id/threePointA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_point"
                android:textAllCaps="false"
                android:layout_marginBottom="10dp"/>
            <Button
                android:id="@+id/twoPointA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two_point"
                android:textAllCaps="false"
                android:layout_marginBottom="10dp"/>
            <Button
                android:id="@+id/freePointA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_throw"
                android:textAllCaps="false"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/bTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b_team"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="---"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/scoreB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textAllCaps="false"
                android:textSize="50dp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_point"
                android:textAllCaps="false"
                android:layout_marginBottom="10dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two_point"
                android:textAllCaps="false"
                android:layout_marginBottom="10dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_throw"
                android:textAllCaps="false"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scoreLayout"
        android:text="Reset Score" />

</RelativeLayout>